Saving progress so far, then I'm about to switch to instead of using self.<parameter name>, I'll just reassign them immediately in each function, and then use them (similarto what I did in p_l_H_mf_nou

--- a/batteryAgent.ipynb
+++ b/batteryAgent.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -737,7 +737,7 @@
     {
      "data": {
       "text/plain": [
-       "<batteryAgent.batteryAgent instance at 0x104c4a2d8>"
+       "<batteryAgent.batteryAgent instance at 0x104c33368>"
       ]
      },
      "execution_count": 29,
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -773,11 +773,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1.        ,  1.        , -1.        ,  2.00101011,  1.        ,\n",
-       "        1.        ])"
+       "array([ 1.,  1., -1.,  3.,  1.,  1.])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -801,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -812,7 +811,7 @@
        "array([1., 1.])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -834,7 +833,7 @@
        "array([1., 1.])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -853,10 +852,10 @@
     {
      "data": {
       "text/plain": [
-       "array([-1.        ,  2.00101011])"
+       "array([-1.,  3.])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -878,7 +877,7 @@
        "array([1., 1.])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -909,35 +908,13 @@
        "0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bat.t_0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0.])"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bat.q_s_dot"
    ]
   },
   {
@@ -959,7 +936,7 @@
     }
    ],
    "source": [
-    "bat.q_s_0"
+    "bat.q_s_dot"
    ]
   },
   {
@@ -972,10 +949,32 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 0, 0, 0, 0, 0, 0, 0])"
+       "array([0., 0.])"
       ]
      },
      "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bat.q_s_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 0, 0, 0, 0, 0, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -997,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -1008,35 +1007,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "H_l_nou = bat.H_l_nou(q_s, p_l, u_s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "H_l[0]"
    ]
   },
   {
@@ -1049,10 +1026,32 @@
     {
      "data": {
       "text/plain": [
-       "(10,)"
+       "0.0"
       ]
      },
      "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "H_l[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10,)"
+      ]
+     },
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -1082,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -1093,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -1105,7 +1104,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-47-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-48-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
      ]
     }
@@ -1116,7 +1115,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(360)H_mf_nou()\n",
+      "-> def q_B_mf_dot(self, p_mf):\n",
+      "(Pdb) l\n",
+      "355  \t        q_B = q_mf[1]\n",
+      "356  \t\n",
+      "357  \t        p_1_mf = p_mf[0]\n",
+      "358  \t        p_B_mf = p_mf[1]\n",
+      "359  \t        import pdb; pdb.set_trace()\n",
+      "360  ->\t        def q_B_mf_dot(self, p_mf):\n",
+      "361  \t            '''Helper function for computing the other mean field methods'''\n",
+      "362  \t            # TODO: replace as a function of self.K and self.T\n",
+      "363  \t            delta = 1\n",
+      "364  \t            p_1_mf = p_mf[0]\n",
+      "365  \t            p_B_mf = p_mf[1]\n",
+      "(Pdb) p_mf\n",
+      "array([0, 0])\n",
+      "(Pdb) c\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bat.H_mf_nou(q_mf, p_mf, u_mf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bat.H_mf_u(q_mf, p_mf, u_mf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1141,51 +1207,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2., 3.])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 2])"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_mf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1197,142 +1241,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.0]"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "alpha_mf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.0]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "alpha_l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([8.])]"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Beta_mf\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([0.])]"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Beta_l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'H_mf_D'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-56-591890945943>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mu_dot_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mu_rhs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqp_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstate_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGamma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGamma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqp_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mu_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq_s_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp_l_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mu_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mH_l_D\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mH_l_D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBeta_mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBeta_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBeta_l\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBeta_l\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha_mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0malpha_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha_l\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0malpha_l\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py\u001b[0m in \u001b[0;36mu_rhs\u001b[0;34m(self, t, u_vec, **kwargs)\u001b[0m\n\u001b[1;32m    493\u001b[0m         \u001b[0mu_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'u_mf'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    494\u001b[0m         \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'qp_vec'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 495\u001b[0;31m         \u001b[0mH_mf_D\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'H_mf_D'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    496\u001b[0m         \u001b[0mH_l_D\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'H_l_D'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    497\u001b[0m         \u001b[0mBeta_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Beta_mf'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'H_mf_D'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "u_dot_vec = bat.u_rhs(0.0, qp_vec, state_dim=state_dim, Gamma = bat.Gamma, qp_vec = qp_vec, u_0=u_s, q_s_dot=q_s_dot, p_l_dot=p_l_dot, p_mf_dot=p_mf_dot, q_mf_dot=q_mf_dot, q_mf=q_mf, u_mf=u_mf, H_l_D=H_l_D, Beta_mf=Beta_mf, Beta_l=Beta_l, alpha_mf=alpha_mf, alpha_l=alpha_l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'u_dot_vec' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-58-28e2ee0af830>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mu_dot_vec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'u_dot_vec' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "u_dot_vec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1348,44 +1323,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3, 3])"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_function(np.array([3]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nHow should we implement this?\\n1) write a single method called \"test_dimensions\"\\n2) it will test each of the methods that we know appear in all of the \\n'"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "How should we implement this?\n",
