Currently need to either fill in the H_mf_nou, or revert back to just returning 1

--- a/batteryAgent.ipynb
+++ b/batteryAgent.ipynb
@@ -737,7 +737,7 @@
     {
      "data": {
       "text/plain": [
-       "<batteryAgent.batteryAgent instance at 0x104c33368>"
+       "<batteryAgent.batteryAgent instance at 0x104ce9200>"
       ]
      },
      "execution_count": 29,
@@ -1115,52 +1115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(360)H_mf_nou()\n",
-      "-> def q_B_mf_dot(self, p_mf):\n",
-      "(Pdb) l\n",
-      "355  \t        q_B = q_mf[1]\n",
-      "356  \t\n",
-      "357  \t        p_1_mf = p_mf[0]\n",
-      "358  \t        p_B_mf = p_mf[1]\n",
-      "359  \t        import pdb; pdb.set_trace()\n",
-      "360  ->\t        def q_B_mf_dot(self, p_mf):\n",
-      "361  \t            '''Helper function for computing the other mean field methods'''\n",
-      "362  \t            # TODO: replace as a function of self.K and self.T\n",
-      "363  \t            delta = 1\n",
-      "364  \t            p_1_mf = p_mf[0]\n",
-      "365  \t            p_B_mf = p_mf[1]\n",
-      "(Pdb) p_mf\n",
-      "array([0, 0])\n",
-      "(Pdb) c\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bat.H_mf_nou(q_mf, p_mf, u_mf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -1171,7 +1137,7 @@
        "array([1])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -1207,22 +1173,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2., 3.])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p_l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 2])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p_mf"
    ]
@@ -1233,7 +1221,48 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/numerical_propagator.py(349)alphas()\n",
+      "-> alpha_mf_j = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_nou(q_mf, p_mf), q_s_dot) + np.dot(self.p_rhs_H_mf_nou(q_mf, p_mf), p_mf_dot)) +\\\n",
+      "(Pdb) l\n",
+      "344  \t        H_l_u = self.H_l_u(q_s, p_l)\n",
+      "345  \t        H_mf_nou = self.H_mf_nou(q_mf, p_mf, u_mf)\n",
+      "346  \t        H_l_nou = self.H_l_nou(q_s, p_l, lambda_l)\n",
+      "347  \t        lambda_l=0\n",
+      "348  \t        import pdb; pdb.set_trace()\n",
+      "349  ->\t        alpha_mf_j = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_nou(q_mf, p_mf), q_s_dot) + np.dot(self.p_rhs_H_mf_nou(q_mf, p_mf), p_mf_dot)) +\\\n",
+      "350  \t                        (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], p_mf_dot))\n",
+      "351  \t        alpha_l_j = H_l_u[j]*(np.dot(self.q_rhs_H_l_nou(q_s, p_l, lambda_l), q_s_dot) + np.dot(self.p_rhs_H_l_nou(q_s, p_l, lambda_l), p_l_dot)) +\\\n",
+      "352  \t                        (H_l_nou-H_l_D)*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
+      "353  \t        alpha_mf.append(alpha_mf_j)\n",
+      "354  \t        alpha_l.append(alpha_l_j)\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/numerical_propagator.py(350)alphas()\n",
+      "-> (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], p_mf_dot))\n",
+      "(Pdb) n\n",
+      "TypeError: \"unsupported operand type(s) for -: 'NoneType' and 'int'\"\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/numerical_propagator.py(350)alphas()\n",
+      "-> (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], p_mf_dot))\n",
+      "(Pdb) self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], q_s_dot\n",
+      "(array([1., 1.]), array([1., 1.]))\n",
+      "(Pdb) self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], p_mf_dot)\n",
+      "*** SyntaxError: invalid syntax (<stdin>, line 1)\n",
+      "(Pdb) self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)\n",
+      "array([[1., 1.]])\n",
+      "(Pdb) np.dot(self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], p_mf_dot)\n",
+      "4.0\n",
+      "(Pdb) H_mf_nou-H_l_D\n",
+      "*** TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
+      "(Pdb) H_mf_nou\n",
+      "(Pdb) H_l_D\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "alpha_mf, alpha_l = alphas(bat, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, p_l_dot)\n",
     "Beta_mf, Beta_l = Betas(bat, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l)"
