--- a/batteryAgent.ipynb
+++ b/batteryAgent.ipynb
@@ -737,7 +737,7 @@
     {
      "data": {
       "text/plain": [
-       "<batteryAgent.batteryAgent instance at 0x104ce9200>"
+       "<batteryAgent.batteryAgent instance at 0x104c36560>"
       ]
      },
      "execution_count": 29,
@@ -1115,40 +1115,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(355)H_mf_nou()\n",
+      "-> q_1_mf = q_mf[0]\n",
+      "(Pdb) q_mf\n",
+      "array([1, 1, 0, 0, 0, 0, 0, 0, 0, 0])\n",
+      "(Pdb) l\n",
+      "350  \t\n",
+      "351  \t    # Mean Field methods\n",
+      "352  \t    def H_mf_nou(self, q_mf, p_mf, u_mf):\n",
+      "353  \t        import pdb; pdb.set_trace()\n",
+      "354  \t        # should return a scalar\n",
+      "355  ->\t        q_1_mf = q_mf[0]\n",
+      "356  \t        q_B_mf = q_mf[1]\n",
+      "357  \t\n",
+      "358  \t        p_1_mf = p_mf[0]\n",
+      "359  \t        p_B_mf = p_mf[1]\n",
+      "360  \t\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(356)H_mf_nou()\n",
+      "-> q_B_mf = q_mf[1]\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(358)H_mf_nou()\n",
+      "-> p_1_mf = p_mf[0]\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(359)H_mf_nou()\n",
+      "-> p_B_mf = p_mf[1]\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(361)H_mf_nou()\n",
+      "-> def q_B_mf_dot(self, p_mf):\n",
+      "(Pdb) num\n",
+      "*** NameError: name 'num' is not defined\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(375)H_mf_nou()\n",
+      "-> def q_1_mf_dot(self, p_mf):\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(386)H_mf_nou()\n",
+      "-> return\n",
+      "(Pdb) l\n",
+      "381  \t            q_B_mf_dot = self.q_B_mf_dot(p_mf)\n",
+      "382  \t            q_1_mf_dot = (p_1_mf/(self.R_1*delta)) - q_B_mf_dot\n",
+      "383  \t\n",
+      "384  \t            return q_1_mf_dot\n",
+      "385  \t \n",
+      "386  ->\t        return \n",
+      "387  \t\n",
+      "388  \t    def L_mf(self, q_mf, q_mf_dot, u_mf):\n",
+      "389  \t        '''\n",
+      "390  \t        This method computes the mean field lagrangian.  Note that since u_mf contains the local u, it is not necessary to be an input, we could use u_s, but to be consistent with the mean field methods, we will use u_mf.\n",
+      "391  \t        '''\n"
+     ]
+    }
+   ],
    "source": [
     "bat.H_mf_nou(q_mf, p_mf, u_mf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1])"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bat.H_mf_u(q_mf, p_mf, u_mf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1173,44 +1217,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2., 3.])"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 2])"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_mf"
    ]
@@ -1221,48 +1243,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/numerical_propagator.py(349)alphas()\n",
-      "-> alpha_mf_j = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_nou(q_mf, p_mf), q_s_dot) + np.dot(self.p_rhs_H_mf_nou(q_mf, p_mf), p_mf_dot)) +\\\n",
-      "(Pdb) l\n",
-      "344  \t        H_l_u = self.H_l_u(q_s, p_l)\n",
-      "345  \t        H_mf_nou = self.H_mf_nou(q_mf, p_mf, u_mf)\n",
-      "346  \t        H_l_nou = self.H_l_nou(q_s, p_l, lambda_l)\n",
-      "347  \t        lambda_l=0\n",
-      "348  \t        import pdb; pdb.set_trace()\n",
-      "349  ->\t        alpha_mf_j = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_nou(q_mf, p_mf), q_s_dot) + np.dot(self.p_rhs_H_mf_nou(q_mf, p_mf), p_mf_dot)) +\\\n",
-      "350  \t                        (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], p_mf_dot))\n",
-      "351  \t        alpha_l_j = H_l_u[j]*(np.dot(self.q_rhs_H_l_nou(q_s, p_l, lambda_l), q_s_dot) + np.dot(self.p_rhs_H_l_nou(q_s, p_l, lambda_l), p_l_dot)) +\\\n",
-      "352  \t                        (H_l_nou-H_l_D)*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_l_dot))\n",
-      "353  \t        alpha_mf.append(alpha_mf_j)\n",
-      "354  \t        alpha_l.append(alpha_l_j)\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/numerical_propagator.py(350)alphas()\n",
-      "-> (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], p_mf_dot))\n",
-      "(Pdb) n\n",
-      "TypeError: \"unsupported operand type(s) for -: 'NoneType' and 'int'\"\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/numerical_propagator.py(350)alphas()\n",
-      "-> (H_mf_nou-H_l_D)*(np.dot(self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], p_mf_dot))\n",
-      "(Pdb) self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], q_s_dot\n",
-      "(array([1., 1.]), array([1., 1.]))\n",
-      "(Pdb) self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], p_mf_dot)\n",
-      "*** SyntaxError: invalid syntax (<stdin>, line 1)\n",
-      "(Pdb) self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)\n",
-      "array([[1., 1.]])\n",
-      "(Pdb) np.dot(self.q_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(q_mf, p_mf, u_mf)[j], p_mf_dot)\n",
-      "4.0\n",
-      "(Pdb) H_mf_nou-H_l_D\n",
-      "*** TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'\n",
-      "(Pdb) H_mf_nou\n",
-      "(Pdb) H_l_D\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "alpha_mf, alpha_l = alphas(bat, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, H_l_D, p_l_dot)\n",
     "Beta_mf, Beta_l = Betas(bat, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l)"
